refactor GoCovParser to introduce ModuleRegistry for accurate module path resolution and enhance path parsing logic